2010-08-30 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bug when using failover.

2010-08-18  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bug when mount on admin node raises exception with clusterdb (#76).

2010-07-29  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bug with 'shine status' on a bad node.
	* Fix traceback when a node crash during shine execution.
	* Fix bad message with 'shine stop -L'

2010-07-23  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.908

2010-07-17  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bad argument parsing (ticket #55)

2010-07-02  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Clean example model file.
	* Remove unsupported 'failover' parameter in model file (ticket #66).
	* Commmand mount, umount and status display progress information (ticket
	  #2).

2010-06-17  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Better target checks (ticket #71).

2010-06-16  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix error when a target raises an event failed.

2010-06-11  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix failover with more than one failnode.

2010-05-21  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.907

2010-05-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Hostname resolution improvements (fix ticket #60 and #61).

2010-05-19  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Better error handling with unreachable nodes when installing(ticket #58).

2010-05-18  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Primary version of failover support (ticket #18).

2010-05-05  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Allow filesystem with no MDT and OST (ticket #39).

2010-04-09  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.906

2010-04-09  Jerome Fereyre  <jerome.fereyre@bull.net>
	* Add fsck command (ticket #34).

2010-04-07  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add router management (ticket #15).
